[tool.poetry]
name = "snowstorm"
version = "0.0.0"
description = "Implements mechanisms for shipping data from any service to the Bink Data Management Team"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-monitor-query = "^1.0.3"
azure-identity = "^1.12.0"
sqlalchemy = "^2.0.0"
pydantic = "^1.10.4"
click = "^8.1.3"
alembic = "^1.9.2"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
pika = "^1.3.1"
faker = "^16.6.0"
redis = "^4.4.2"
pendulum = "^2.1.2"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
azure-storage-blob = "^12.14.1"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.2"
isort = "^5.11.4"
black = "^22.12.0"

[tool.poetry.scripts]
stormctl = "snowstorm.cli:cli"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
